--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">YSW</string>
+    <string name="app_name">Fast_mvp_kt</string>
     <string name="jump">跳过</string>
 
     <string name="title_home1">home1</string>
